test/domains/neth/nonHomoScalar2.good
nonHomoScalar2.chpl:1: error: Tuple bounds must be homogenous. Got (int(64),real(64))
