test/domains/neth/nonHomoScalar2.chpl
var d = makeRectangularDomain((0,0.0), 10);